io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/inconsistentredpayable1/Sub.java
package io.hotmoka.tests.errors.inconsistentredpayable1;

import io.takamaka.code.lang.FromContract;

public class Sub extends Super {
	public @FromContract void m() {}
}